--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "keywords": [],
   "dependencies": {
     "async": "^2.2.0",
+    "bower": "^1.4.1",
     "ejs": "2.3.4",
+    "forever": "^0.11.1",
     "grunt": "1.0.1",
     "grunt-contrib-clean": "1.0.0",
     "grunt-contrib-coffee": "1.0.0",
@@ -22,6 +24,7 @@
     "include-all": "^1.0.0",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
+    "q": "^1.4.1",
     "rc": "1.0.1",
     "sails": "~0.12.10",
     "sails-disk": "~0.10.9",
